{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 25,
  "lineage": "7f1e4924-6eaa-a494-016e-b723bdb50c15",
  "resources": [
    {
      "module": "module.EC2-module",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "myapp-default-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:security-group/sg-0c068b26ac8e0bd92",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rules to allow access of the resources inside the vpc to the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c068b26ac8e0bd92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open port 22 for cli access to the EC2 instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Open port 8080 for access of the nginx server in the ec2 instance from a browser ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "065073657325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "xx-default-security-group"
            },
            "tags_all": {
              "Name": "xx-default-security-group"
            },
            "vpc_id": "vpc-062a6167a367aec40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:065073657325:instance/i-083cb6875b9f1fda2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083cb6875b9f1fda2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myapp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aaefb7ff92df499f",
            "private_dns": "ip-10-0-1-90.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.90",
            "public_dns": "ec2-51-20-35-209.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.35.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000626e0ef7fc3d8b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d018f0c5c9227909",
            "tags": {
              "Name": "xx-EC2-instance1"
            },
            "tags_all": {
              "Name": "xx-EC2-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c068b26ac8e0bd92"
            ]
          },
          "dependencies": [
            "module.EC2-module.aws_default_security_group.myapp-default-security-group",
            "module.EC2-module.aws_key_pair.myapp-key-pair",
            "module.vpc-module.aws_subnet.public-subnet-1",
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.EC2-module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0989fb15ce71ba39e",
            "arn": "arn:aws:ec2:eu-north-1:065073657325:instance/i-0ec24552787e7df90",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec24552787e7df90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myapp-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0d78a9c759b83d8",
            "private_dns": "ip-10-0-2-90.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.90",
            "public_dns": "ec2-16-171-2-152.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.2.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa1b53bbc69de8ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060e1992a30f59529",
            "tags": {
              "Name": "xx-EC2-instance2"
            },
            "tags_all": {
              "Name": "xx-EC2-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c068b26ac8e0bd92"
            ]
          },
          "dependencies": [
            "module.EC2-module.aws_default_security_group.myapp-default-security-group",
            "module.EC2-module.aws_key_pair.myapp-key-pair",
            "module.vpc-module.aws_subnet.public-subnet-2",
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:route-table/rtb-066820cc91395cfac",
            "default_route_table_id": "rtb-066820cc91395cfac",
            "id": "rtb-066820cc91395cfac",
            "owner_id": "065073657325",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc51912cb6c289dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xx-default-router-table"
            },
            "tags_all": {
              "Name": "xx-default-router-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a6167a367aec40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-module.aws_internet_gateway.myapp-internet-gateway",
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:internet-gateway/igw-0bc51912cb6c289dc",
            "id": "igw-0bc51912cb6c289dc",
            "owner_id": "065073657325",
            "tags": {
              "Name": "xx-internet-gateway"
            },
            "tags_all": {
              "Name": "xx-internet-gateway"
            },
            "vpc_id": "vpc-062a6167a367aec40"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:subnet/subnet-0d018f0c5c9227909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d018f0c5c9227909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065073657325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xx-subnet-1"
            },
            "tags_all": {
              "Name": "xx-subnet-1"
            },
            "vpc_id": "vpc-062a6167a367aec40"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:subnet/subnet-060e1992a30f59529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060e1992a30f59529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065073657325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "xx-subnet-2"
            },
            "tags_all": {
              "Name": "xx-subnet-2"
            },
            "vpc_id": "vpc-062a6167a367aec40"
          },
          "dependencies": [
            "module.vpc-module.aws_vpc.Ansible-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Ansible-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:065073657325:vpc/vpc-062a6167a367aec40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e898dbab65b1717",
            "default_route_table_id": "rtb-066820cc91395cfac",
            "default_security_group_id": "sg-0c068b26ac8e0bd92",
            "dhcp_options_id": "dopt-02da5b6c4795dc5cc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062a6167a367aec40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066820cc91395cfac",
            "owner_id": "065073657325",
            "tags": {
              "Name": "xx-vpc"
            },
            "tags_all": {
              "Name": "xx-vpc"
            }
          }
        }
      ]
    }
  ]
}